# twitter_news

./: .env  .gitignore  convnet.py  definitions.py  experiment.ipynb  experiment_2.py  expriments.py  learning_pytweet.py  news_analisis.ipynb  pandas_utils.py  pyproject.toml  scraping_utils.py  scrappers.py  tf_utils.py  web_scraping.py
configs/: CDCN_CL_1.yml
data_ingestion/dataloader/: dataloader.py  dataloader_factory.py  samplers.py  utils.py
data_ingestion/dataset/: __init__.py  dataset_factory.py  datasets.py  utils.py
data_ingestion/transforms/: __init__.py  basic_transformations.py  composed_transformations.py  transformation_builder.py
data_ingestion/vocabs/: README.md
models/: model_factory.py
models/model_definition/: BERT.py  LTSM.py
nlp_utils/: wandb_utils.py
training/: __init__.py  evaluator.py  metrics.py  trainer.py
utils/: __init__.py  factories.py
v.1/: facebook_scrapping.py  scrappers.py
