[tool.poetry]
name = "twitter_news"
version = "0.1.0"
description = ""
authors = ["aysaac <isaacgr2014@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.1"
pandas = "^1.3.5"
sklearn = "^0.0"
spacy = "^3.1.0"
es-core-news-sm = "^3.1.0"
tweepy = "^4.4.0"
beautifulsoup4 = "^4.10.0"
datatable = "^1.0.0"
wandb = "^0.12.9"
transformers = "^4.16.2"
scikit-image = "^0.19.2"
matplotlib = "^3.5.1"
torch="1.10.2+cu113"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
